CODETOOLS-7903840: apidiff: optionally show expansion of `--jdk-build`